修改gc参数